[package]
name = "canyon-util-rust"
version = "0.1.2"
authors = ["wr_zhang25@163.com"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
